[tool.poetry]
name = "mavryk-indexer"
version = "0.1.0"
description = ""
authors = ["Tristan Allaire <tristan.allaire@alarch.fr>"]

[tool.poetry.dependencies]
python = "3.10.12"
dipdup = "6.5.7"
python-dateutil = "^2.8.2"
PyYAML = "^6.0"
asyncclick = "^8.1.3"
python-telegram-bot = "^20.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
