[tool.poetry]
name = "maven-indexer"
version = "0.1.0"
description = ""
authors = ["Tristan Allaire <tristan.allaire@alarch.fr>"]

[tool.poetry.dependencies]
python = "3.11.6"
dipdup = "7.5.5"
python-dateutil = "^2.8.2"
PyYAML = "^6.0"
asyncclick = "^8.1.3"
python-telegram-bot = "^20.2"
tortoise-orm = "^0.19.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
