[tool.poetry]
name = "deku-exporter"
version = "0.1.0"
description = ""
authors = ["Tristan Allaire <tristan.allaire@alarch.fr>"]

[tool.poetry.dependencies]
python = "^3.10"
prometheus-client = "^0.15.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
